Updated landing page background images, fixed website breaking at 313px, added navigation bar animation, removed redundant code, fixed dark mode and hcaptcha modals,
Changed the brightness of the dark mode landing page background image and moved both light and dark mode landing page background image down to make it more visible in the style.css and scrpt.js files.

Fixed the website breaking at the viewport size of 313px on the style.css, responsive-style.css files.

Added an animation to the top navigation bar in the style.css, script.js, thank-you-page-script.js and privacy-policy-page.css files.

Fixed the dark mode and hcaptcha modals position and style in the style.css and responsive.css files.

Removed any unnecessary code in the style.css file.

--- a/src/modal-style.css
+++ b/src/modal-style.css
@@ -22,7 +22,8 @@ Modal CSS Order:
     z-index: 7;
     width: 95%;
     text-align: center;
-    background-color: var(--light-mode);
+    background-color: var(--lightest-grey);
+    border-radius: 24px;
 }
 .dark-mode-modal-title,
 .hcaptcha-modal-title {
@@ -69,7 +70,8 @@ Modal CSS Order:
     background-color: rgb(235.0, 150.4, 5.3);
 }
 .dark-mode-modal-container {
-    height: 448px;
+    padding-bottom: 10em;
+    box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.5);
     transform: translate(2.5%, 20%);
 }
 .dark-mode-modal-allow-button {
@@ -80,9 +82,9 @@ Modal CSS Order:
 }
 
 .hcaptcha-modal-container {
-    /*? height: 248px; */
-    height: 185px;
-    transform: translate(2.5%, 36%);
+    background-color: var(--lightest-grey);
+    box-shadow: 1.5px 1.5px 4px rgba(0, 0, 0, 0.5);
+    transform: translate(2.5%, 27%);
 }
 .hcaptcha-modal-ok-button {
     width: 25%;
